# graphics_tut

./: .gitignore  CMakeLists.txt  main.cpp  mesh.cc  mesh.h  minimal.cc  rotating_cube.cc  shader.h  texture.cc  texture.h  texture_basic.cpp  transparent_textures.cc  utils.cc  utils.h
shaders/: fragment.glsl  perspective_vertices.glsl  vertex.glsl
